<resources>
    <string name="app_name">MSIC</string>
    <string name="pref_default_contact" />
    <string name="start_button_text">Be Safe</string>
    <string name="default_time">30:00</string>
    <string name="time_format">%1$02d:%2$02d</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="emergency_contact_2">Emergency Contact 2</string>
    <string name="count_down">Count Down Time</string>
    <string name="stop">STOP</string>
    <string-array name="pref_general_countdown_titles">
        <item>1 minute</item>
        <item>2 minutes</item>
        <item>3 minutes</item>
        <item>4 minutes</item>
        <item>5 minutes</item>
        <item>6 minutes</item>
        <item>7 minutes</item>
        <item>8 minutes</item>
        <item>9 minutes</item>
        <item>10 minutes</item>
    </string-array>
    <string-array name="pref_general_countdown_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="drug_safety_titles">
        <item>Signs of an opioid overdose</item>
        <item>How to respond to an opioid overdose</item>
        <item>Harm minimization advice</item>
    </string-array>
    <string-array name="drug_safety_bodies">
        <item>
            • Unconsciousness\n
            • Snoring sounds or a gurgling noise\n
            • Bluish skin, fingernails and/or lips\n
            • Shallow or erratic breathing, or not breathing at all\n
            • Pinned pupils
        </item>
        <item>
            1. Check the environment is safe- clear away any uncapped needles or other sharp objects.\n
            2. Try to rouse the person by calling their name or squeezing their shoulder.\n
            3. Call an ambulance. Dial (000).\n
            4. Check airway- if not breathing, roll the person on their back and give 2 x rescue breaths.\n
            5. If you have Narcan (Naloxone), inject it into the person’s arm or thigh.\n
            6. Continue rescue breathing until the person resumes breathing normally or the ambulance arrives.\n
            7. Second dose of Narcan within 2-5 minutes if the person is still unconscious.\n
            8. Put in recovery position when breathing normally.
        </item>
        <item>
            If you are reading this, we assume that you have already made the choice to use opioids alone. We would like to remind you of the high risk nature of what you are doing.\n\n

            There are other factors which are also well known to contribute in overdoses:\n
                • Is your tolerance lower than usual?\n
                • Have you just come out of prison or rehab?\n
                • Have you drunk alcohol or swallowed any other Central Nervous System depressants such as valium, Xanax, rivitril? Lyrica? Seroquel?\n
                • Stronger drugs. Are you familiar with the batch? It is always a good idea to test the strength by having a small shot first. You can always top up with a bit more but it’s a lot harder to undo what’s been done.\n\n

            Overdose can happen in degrees. It can start as having trouble staying awake (being on the nod) and breathing slowly is already a sign of a minor overdose. If you are ever in this condition, then you at risk of getting worse.\n\n

            FINALLY, WE CAN’T STRESS ENOUGH HOW DANGEROUS IT IS TO USE ALONE. MANY PEOPLE DIE THIS WAY.\n
            IN FACT MOST OVERDOSE DEATHS HAPPEN TO PEOPLE WHO HAVE USED ALONE. WE DON’T WANT YOU TO BE THIS PERSON.\n\n

            SAVE A FRIEND- LEARN RESUSCITATION
        </item>
    </string-array>
    <string-array name="how_to_titles">
        <item><b>Instructions</b></item>
        <item><b>1. What to Consider When Choosing Your Contact Number</b></item>
        <item><b>2. What to Put in Your Message/ How to Get Help to You as Quickly as Possible</b></item>
        <item><b>3. Setting the Timer</b></item>
        <item><b>4. Snooze Function</b></item>
        <item><b>5. How to Cancel a Message</b></item>
        <item><b>6. Response Alarm</b></item>
        <item><b>7. Privacy and Metadata Concerns</b></item>
    </string-array>
    <string-array name="how_to_bodies">
        <item>
            The app will sound an alarm at a pre-determined time. If you do not stop or snooze the alarm, it will send an automated message to the contacts you have chosen. You get to write that message requesting emergency assistance.\n\n

            This assistance will depend on what you write in the message – see 2. below.\n\n

            It could mean your contact calls an ambulance to the location you indicate or your contact attends in person to administer naloxone if they were nearby and had naloxone\n\n

            Steps:\n
                • Open the app\n
                • Choose up to two contacts\n
                • Write the message- enable GPS so this is added to your message and include as much detail about location\n
                • Set off timer on app when commencing injection process
        </item>
        <item>
                • It is recommended that you explain this app to your contacts ahead of time. Explain to them the message they may receive so that they take it seriously.\n\n
                • In this particular instance is your contact currently available and answering their phone? Maybe you should call first to check they are answering.\n\n
                • It is recommended that you always choose a second contact in case your first contact does not answer.
        </item>
        <item>
            You need to think about how help can get to you as quickly as possible. This means that the information you give is very important. SMS messages are limited to 160 characters so you need to be clear but succinct.\n\n

            Your message is set from a settings menu and can be re-used. Each time you use the app you should review your message and update it as your location changes.\n\n

                • Type out and save the message (first time use) or review and amend the message (subsequent use)\n
                • You have the choice of enabling GPS. This is recommended as it gives further information of your location. If you use this option, a Google maps url with latitude and longitude of max 39 characters plus a space would be appended to the end of the message. This will limit the rest of your message to 120 characters\n
                • As a precaution you should still be asked to include an indication of their location. Latitude and longitude are dependent on phone gps and may not be exact.\n
                • Be clear about the actions you want them to take. E.g. “call 000, tell them to send an ambulance to Kellet lane, nearest crossroad Bayswater Rd, and that someone is not breathing.” OR “Call reception of my hotel on *** and tell them someone has stopped breathing in Room 1313.”\n
                • Give as much information as possible about your location- is it a public toilet? a park? Are you behind a certain colour car? The more detail the better!\n
                • If you are using a public toilet, do NOT lock the cubicle. At present, you cannot use 000 as your contact number as the ambulance service is unable to respond to these calls.
        </item>
        <item>
            Think about how long it takes you to inject and set the timer accordingly. If you have no trouble finding a vein, you should be able to put on a tourniquet, find the vein, swab the site, and inject within a minute or so.\n\n
            You have 15 seconds to turn off the alarm before the message is sent out.\n\n
            Hit snooze if you need more time, for example, if you miss the vein and need to start injecting again.
        </item>
        <item>
            Overdose can happen immediately or over a period of time depending on the situation and the individual.\n\n

            Make sure you don\'t switch the app off unless you\'re fully awake and moving on.\n\n

            If you wake up to the sound of the alarm, it is highly probably that you are still in the danger zone. We recommend you press the “snooze” button if the alarm woke you. This will reset the alarm to sound in a further 60 seconds time.\n\n

            Continue hitting “snooze” for as long as you are falling asleep. Going on the nod on your own is an incredibly dangerous thing to do. If you are ever in this situation you should go find some people immediately.\n\n

            Did the alarm wake you? Be safe and press snooze for another period of time.\n\n

            Maybe you can call your contact and explain the situation. Tell them you are okay but you feel drowsy and you are worried you still might overdose and to please check for text messages for the next hour or so. Even better, could the person drop by and stay with you for a bit.
        </item>
        <item>
            Messages cannot be cancelled once they are sent. If you need to cancel your text, you will need to phone or send a follow up text directly to your contacts.
        </item>
        <item>
            You have the option of using the "response alarm." This is an alarm on your phone that will sound when the message is sent in order to attract the attention of anyone nearby who might be able to assist.\n\n

            The \'response alarm\' will continue until deactivated.\n\n

            We recommend the response alarm is used each time.
        </item>
        <item>
             No personally identifiable information is collected. In the event of unforeseen application failure a crashdump may be reported for the purpose of ensuring app quality. The sole aim of this app is to save lives.\n\n

            The message itself is carried out over SMS which the user\'s and recipient\'s ISPs would have full access to. If enabled, the GPS in your phone will be used to assist in locating you.\n\n

            In Australia, police do not attend overdoses when ambulances are called to them. They will only attend if somebody dies, or if something non-drug related happens such as you crash your car as a result of overdosing while driving. As the current law stands, police are unable to access your information from your ISP without a warrant and they would have to have a good reason to do this.
        </item>
    </string-array>
    <string name="pref_title_emergency_message">Emergency Message</string>
    <string name="pref_default_emergency_message">Urgent medical emergency. Cannot breathe, please call 911.</string>
    <string name="pref_enable_location">Location</string>
    <string name="ok">@android:string/ok</string>
    <string name="cancel">Cancel</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="settings">Settings</string>
    <string name="init_dialog_title">Warning</string>
    <string name="init_dialog_message">An overdoes can still occur for some time after injection!</string>
    <string name="sms_permissions_dialog_message">Both SMS and Read Phone State permissions are required to send text messages on your device.</string>
    <string name="disclaimer_header">By clicking accept, the application user acknowledges that he/she understands and accepts the following conditions:\n\n </string>
    <string name="disclaimer">Disclaimer</string>
    <string name="emergency_contact_key">emergency_contact</string>
    <string name="emergency_contact_aux_key">emergency_contact_aux</string>
    <string name="enable_location_key">enable_location</string>
    <string name="countdown_time_key">countdown_timer_pref</string>
    <string name="app_logo">App Logo</string>
</resources>