<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="1"
        android:entries="@array/pref_general_countdown_titles"
        android:entryValues="@array/pref_general_countdown_values"
        android:key="@string/countdown_time_key"
        android:title="@string/count_down" />

    <SwitchPreference
        android:id="@+id/enable_location_pref"
        android:defaultValue="false"
        android:key="@string/enable_location_key"
        android:title="@string/pref_enable_location" />

    <EditTextPreference
        android:id="@+id/emergency_contact_pref"
        android:defaultValue="@string/pref_default_contact"
        android:inputType="phone"
        android:key="@string/emergency_contact_key"
        android:maxLines="1"
        android:phoneNumber="true"
        android:selectAllOnFocus="true"
        android:summary="@string/pref_default_contact"
        android:title="@string/emergency_contact" />

    <EditTextPreference
        android:id="@+id/emergency_contact_aux_pref"
        android:defaultValue="@string/pref_default_contact"
        android:inputType="phone"
        android:key="@string/emergency_contact_aux_key"
        android:maxLines="1"
        android:phoneNumber="true"
        android:selectAllOnFocus="true"
        android:summary="@string/pref_default_contact"
        android:title="@string/emergency_contact_2" />

</PreferenceScreen>
