<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/unitingYellow"
    tools:context="com.uniting.android.msic.LoadingActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_logo"
        app:srcCompat="@drawable/uniting_logo" />

    <TextView
        android:id="@+id/emergency_contact1_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:gravity="start"
        android:text="@string/emergency_contact"
        app:layout_constraintBottom_toTopOf="@id/emergency_contact2_label" />


    <TextView
        android:id="@+id/emergency_contact2_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:gravity="start"
        android:text="@string/emergency_contact_2"
        app:layout_constraintBottom_toTopOf="@id/message_label"
        app:layout_constraintTop_toBottomOf="@id/emergency_contact1_label" />


    <TextView
        android:id="@+id/message_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:gravity="start"
        android:text="@string/pref_title_emergency_message"
        app:layout_constraintBottom_toTopOf="@id/location_label"
        app:layout_constraintTop_toBottomOf="@id/emergency_contact2_label" />


    <TextView
        android:id="@+id/location_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:gravity="start"
        android:text="@string/pref_enable_location"
        app:layout_constraintTop_toBottomOf="@id/message_label" />


    <TextView
        android:id="@+id/emergency_contact1_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:gravity="end"
        android:text="@string/emergency_contact"
        app:layout_constraintTop_toTopOf="@id/emergency_contact1_label" />

    <TextView
        android:id="@+id/emergency_contact2_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:gravity="end"
        android:text="@string/emergency_contact" />

    <TextView
        android:id="@+id/message_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:gravity="end"
        android:text="@string/emergency_contact" />

    <TextView
        android:id="@+id/location_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:gravity="end"
        android:text="@string/emergency_contact" />

    <android.support.constraint.Barrier
        android:layout_width="0dp"
        android:layout_height="0dp">

    </android.support.constraint.Barrier>


    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />


</android.support.constraint.ConstraintLayout>
